# remargin

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  manifest  pnpm-lock.yaml
crates/remargin/: Cargo.toml
crates/remargin-core/: Cargo.toml
crates/remargin-core/skill/: SKILL.md
crates/remargin-core/src/: activity.rs  config.rs  crypto.rs  display.rs  document.rs  frontmatter.rs  id.rs  kind.rs  lib.rs  linter.rs  mcp.rs  on_disk_comment.rs  operations.rs  parser.rs  path.rs  permissions.rs  reactions.rs  responses.rs  session.rs  skill.rs  writer.rs
crates/remargin-core/src/activity/: tests.rs
crates/remargin-core/src/config/: identity.rs  permissions.rs  registry.rs  system_prompt.rs  tests.rs
crates/remargin-core/src/config/identity/: tests.rs
crates/remargin-core/src/config/permissions/: op_name.rs  resolve.rs  tests.rs
crates/remargin-core/src/crypto/: ssh.rs  tests.rs
crates/remargin-core/src/display/: tests.rs
crates/remargin-core/src/document/: allowlist.rs  mime.rs  sample.rs  tests.rs
crates/remargin-core/src/frontmatter/: tests.rs
crates/remargin-core/src/linter/: tests.rs
crates/remargin-core/src/mcp/: sandbox.rs  tests.rs
crates/remargin-core/src/mcp/sandbox/: tests.rs
crates/remargin-core/src/on_disk_comment/: tests.rs
crates/remargin-core/src/operations/: batch.rs  cp.rs  links.rs  migrate.rs  mv.rs  plan.rs  projections.rs  purge.rs  query.rs  replace.rs  sandbox.rs  search.rs  sign.rs  tests.rs  threading.rs  verify.rs
crates/remargin-core/src/operations/batch/: tests.rs
crates/remargin-core/src/operations/cp/: tests.rs
crates/remargin-core/src/operations/links/: tests.rs
crates/remargin-core/src/operations/migrate/: tests.rs
crates/remargin-core/src/operations/mv/: tests.rs
crates/remargin-core/src/operations/projections/: restrict.rs  unprotect.rs
crates/remargin-core/src/operations/purge/: tests.rs
crates/remargin-core/src/operations/query/: tests.rs
crates/remargin-core/src/operations/replace/: tests.rs
crates/remargin-core/src/operations/sandbox/: tests.rs
crates/remargin-core/src/operations/search/: tests.rs
crates/remargin-core/src/operations/sign/: tests.rs
crates/remargin-core/src/operations/threading/: tests.rs
crates/remargin-core/src/operations/verify/: tests.rs
crates/remargin-core/src/parser/: heading.rs  tests.rs
crates/remargin-core/src/permissions/: claude_sync.rs  doctor.rs  hook_settings.rs  inspect.rs  op_guard.rs  pretool.rs  pretool_install.rs  restrict.rs  session_guard.rs  session_guard_install.rs  sidecar.rs  unprotect.rs
crates/remargin-core/src/permissions/claude_sync/: rule_shape.rs  tests.rs
crates/remargin-core/src/permissions/doctor/: tests.rs
crates/remargin-core/src/permissions/inspect/: tests.rs
crates/remargin-core/src/permissions/op_guard/: tests.rs
crates/remargin-core/src/permissions/pretool/: tests.rs
crates/remargin-core/src/permissions/pretool_install/: tests.rs
crates/remargin-core/src/permissions/restrict/: tests.rs
crates/remargin-core/src/permissions/session_guard/: tests.rs
crates/remargin-core/src/permissions/session_guard_install/: tests.rs
crates/remargin-core/src/permissions/sidecar/: tests.rs
crates/remargin-core/src/permissions/unprotect/: tests.rs
crates/remargin-core/src/session/: backend.rs  discovery.rs  multiplexer.rs  multiplexer_tests.rs  spec.rs  tests.rs
crates/remargin-core/src/skill/: tests.rs
crates/remargin-core/src/writer/: tests.rs
crates/remargin-core/tests/: no_override_in_identity.rs
crates/remargin/src/: cli.rs  config.rs  crypto.rs  dispatch.rs  display.rs  document.rs  frontmatter.rs  handlers.rs  lib.rs  linter.rs  main.rs  mcp.rs  obsidian.rs  operations.rs  params.rs  parser.rs  render.rs  skill.rs  tests.rs  tests_session.rs  writer.rs
crates/remargin/src/config/: registry.rs  tests.rs
crates/remargin/src/crypto/: tests.rs
crates/remargin/src/display/: tests.rs
crates/remargin/src/document/: allowlist.rs  tests.rs
crates/remargin/src/frontmatter/: tests.rs
crates/remargin/src/mcp/: tests.rs
crates/remargin/src/operations/: purge.rs  query.rs  tests.rs
crates/remargin/src/operations/batch/: tests.rs
crates/remargin/src/operations/migrate/: tests.rs
crates/remargin/src/operations/query/: tests.rs
crates/remargin/src/operations/search/: tests.rs
crates/remargin/src/parser/: tests.rs
crates/remargin/src/skill/: tests.rs
crates/remargin/src/writer/: tests.rs
crates/remargin/tests/: activity_e2e.rs  adapter_loc_cap.rs  adapter_parity.rs  cli_activity.rs  cli_after_heading.rs  cli_batch_strict_realm.rs  cli_binary_get.rs  cli_claude_restrict.rs  cli_claude_unrestrict.rs  cli_comment_hyphen_content.rs  cli_comment_strict_realm.rs  cli_config_conflicts.rs  cli_config_honored.rs  cli_doctor.rs  cli_get_line_window.rs  cli_get_links.rs  cli_identity_create.rs  cli_kind_filter.rs  cli_lint_deny_ops.rs  cli_mode_flag_removed.rs  cli_mv.rs  cli_path_expansion.rs  cli_permissions.rs  cli_plan_claude_restrict.rs  cli_plan_claude_unrestrict.rs  cli_plan_ops.rs  cli_plan_restrict.rs  cli_plan_unprotect.rs  cli_prompt.rs  cli_purge.rs  cli_query_pending.rs  cli_restrict.rs  cli_rm.rs  cli_session_guard.rs  cli_skill.rs  cli_streams.rs  cli_unprotect.rs  cli_verify_dir.rs  cli_verify_failure_format.rs  permissions_e2e.rs
crates/remargin/tests/activity_e2e/: tests.rs
crates/remargin/tests/adapter_loc_cap/: tests.rs
crates/remargin/tests/cli_activity/: tests.rs
crates/remargin/tests/cli_claude_pretool/: tests.rs
crates/remargin/tests/cli_doctor/: tests.rs
crates/remargin/tests/cli_doctor_verbose/: tests.rs
crates/remargin/tests/cli_get_line_window/: tests.rs
crates/remargin/tests/cli_get_links/: tests.rs
crates/remargin/tests/cli_rm/: tests.rs
crates/remargin/tests/cli_search/: tests.rs
crates/remargin/tests/cli_session_guard/: tests.rs
crates/remargin/tests/cli_verify_dir/: tests.rs
crates/remargin/tests/fixtures/legacy_unprotect/: legacy-settings.json  sidecar.json
crates/xtask/: Cargo.toml
crates/xtask/src/: generate_types.rs  main.rs
src/: id.rs  (+13 more)
(+48 files in other folders)
