[workspace]
members = ["crates/remargin", "crates/remargin-core"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Eduardo Burgos <eduardo@tixena.com>"]
license = "MIT"
repository = "https://github.com/tixena/remargin"

[workspace.dependencies]
remargin-core = { path = "crates/remargin-core" }

# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# YAML processing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# System abstraction (filesystem, env, temp dirs)
os-shim = { git = "https://github.com/tixena/os-shim.git" }

# TypeScript type + Zod schema generation from Rust models
tixschema = { git = "https://github.com/tixena/tixschema.git", features = ["chrono"] }

# Cryptography (checksums, signatures)
sha2 = "0.11"
ssh-key = { version = "0.6", features = ["ed25519", "std", "rand_core", "getrandom"] }
base64 = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "2"

# File system
tempfile = "3"
ignore = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Random ID generation
rand = "0.10"

# Regex (text search)
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# HTTP client (sync, minimal, pure-Rust TLS). Used by the `obsidian` feature
# to fetch plugin assets from GitHub releases at install time.
ureq = { version = "2", default-features = false, features = ["tls"] }

# Skill embedding
include_dir = "0.7"

# Test-only crates
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
blanket_clippy_restriction_lints = "allow"
implicit_return = "allow"
pub_with_shorthand = "allow"
module_name_repetitions = "allow"
question_mark_used = "allow"
self_named_module_files = "allow"
separated_literal_suffix = "allow"
single_call_fn = "allow"
print_stderr = "allow"
# Parser and low-level operations require byte indexing and arithmetic.
indexing_slicing = "allow"
arithmetic_side_effects = "allow"
string_slice = "allow"
# Write to String is infallible; discarding the result is intentional.
let_underscore_must_use = "allow"
# Private implementation details do not need doc comments on every field.
missing_docs_in_private_items = "allow"
# Inline annotations are a micro-optimization applied selectively, not globally.
missing_inline_in_public_items = "allow"
# as_conversions are used sparingly and safely for numeric casts.
as_conversions = "allow"
# Tests use unwrap() and expect() for concise assertions.
unwrap_used = "allow"
# Pattern matching through references is idiomatic in filter_map closures.
pattern_type_mismatch = "allow"
# Single-char identifiers are fine in tight scopes (loop vars, closures).
min_ident_chars = "allow"
# Test function naming is clearer with descriptive names, not enforced prefix rules.
redundant_test_prefix = "allow"
# Integer division is used safely for threshold calculations and tests.
integer_division = "allow"
integer_division_remainder_used = "allow"
# HashSet iteration order is irrelevant for set-comparison operations.
iter_over_hash_type = "allow"
# HashSet parameters use the default hasher; generalization adds complexity for no benefit.
implicit_hasher = "allow"
