[package]
name = "remargin-core"
description = "Core library for the remargin document access layer and review protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["zod", "jsonschema"]
unrestricted = []
# Feature flags mirrored from tixschema so its proc macro expands
# cfg(feature = "...") checks successfully in this crate's scope.
zod = []
jsonschema = []

[dependencies]
# YAML / JSON processing
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true

# System abstraction (filesystem, env, temp dirs)
os-shim.workspace = true

# TypeScript type + Zod schema generation from Rust models
tixschema.workspace = true

# Cryptography (checksums, signatures)
sha2.workspace = true
ssh-key.workspace = true
base64.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# File system
tempfile.workspace = true
ignore.workspace = true

# Date/time
chrono.workspace = true

# Random ID generation
rand.workspace = true

# Regex (text search)
regex.workspace = true

# Logging
tracing.workspace = true

# Skill embedding
include_dir.workspace = true

[dev-dependencies]
tempfile.workspace = true
