[package]
name = "remargin"
description = "CLI and code-generation binaries for the remargin document access layer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "remargin"
path = "src/main.rs"

[[bin]]
name = "generate_types"
path = "src/bin/generate_types.rs"

[features]
default = ["zod", "jsonschema"]
unrestricted = ["remargin-core/unrestricted"]
zod = ["remargin-core/zod"]
jsonschema = ["remargin-core/jsonschema"]
# Expose the `remargin obsidian install|uninstall` subcommand. The install
# path fetches `main.js` and `manifest.json` from the matching GitHub
# release (`obsidian-v{CARGO_PKG_VERSION}`) at runtime, so no TypeScript
# build is required to compile the CLI.
obsidian = ["dep:ureq"]

[dependencies]
remargin-core.workspace = true

# CLI framework
clap.workspace = true

# Cryptography (key generation for `remargin identity`)
ssh-key.workspace = true

# Base64 (binary payloads for `get --binary --json`)
base64.workspace = true

# YAML / JSON processing
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true

# System abstraction (filesystem, env, temp dirs)
os-shim.workspace = true

# Error handling
anyhow.workspace = true

# Date/time
chrono.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP client (only compiled with the `obsidian` feature).
ureq = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
