[package]
name = "xtask"
description = "Internal developer tooling for the remargin workspace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# Core types drive the TypeScript + Zod schema generation.
remargin-core.workspace = true

# Subcommand dispatch.
clap.workspace = true

# Error handling.
anyhow.workspace = true
